# pymarc

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  apply_headers.py  pyproject.toml  setup.cfg  setup.py
docs/source/: conf.py  index.rst
pymarc/: __init__.py  __init__.pyi  exceptions.py  field.py  htmlutils.py  leader.py  marccsv.py  marcjson.py  marcxml.py  reader.py  record.py  writer.py
test/: @  batch.csv  one.csv  test.csv  test_csv.py  test_field.py  test_html_entities.py  test_json.py  test_leader.py  test_marc8.py  test_ordered_fields.py  test_reader.py  test_record.py  test_utf8.py  test_writer.py  test_xml.py
