[project]
name = "pymarc"
version = "5.3.0"
description = "Read, write and modify MARC bibliographic data"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = []
packages = ["pymarc"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mypy>=1.4.1",
    "wheel>=0.42.0",
    "pytest>=7.4.4",
    "hatch>=0.23.1",
    "coverage>=7.2.7",
    "ruff>=0.11.5",
]

[tool.ruff]
lint.ignore = [
    # needed until we make the imports in pymarc/__init__.py more explicit
    "F403",
    "F401", 
]

[tool.mypy]
exclude = '^dist'
